--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Simple RC Sender package based on my golang tool",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CinePlays/rc-sender-js.git"
+  },
   "scripts": {
     "build": "tsc"
   },
